# Mod-Hub

./: CMakeLists.txt  README.md  auth.js  index.html  manifest.json  mods.js  script.js  service-worker.js  styles.css  upload.js
src/: Auth.h  Database.cpp  Datebase.h  main.cpp
src/templates/: style.css
